# seanworkspace

./: CNAME  Descriptive.html  FinancialModels.html  HomePage.html  README.md  Regression.html  StatsTools.html  StatsTools_test  Workspace.html  account.html  finance-timeseries.html  forum.html  index.html  main.py  membership.html  project_showcase.html  pyproject.toml
.history/: FinancialModels_20250312125540.html  FinancialModels_20250312131922.html  FinancialModels_20250312132405.html  FinancialModels_20250312132616.html  FinancialModels_20250312132900.html  FinancialModels_20250312133015.html  FinancialModels_20250312143811.html  FinancialModels_20250312144819.html  FinancialModels_20250312145219.html  FinancialModels_20250312151824.html  IntegratedModels_20250312125902.html  ModelResults_20250312132406.html  StatsTools_20250311153523.html  StatsTools_20250311160741.html  StatsTools_20250311162131.html  VolatilityAnalysis_20250312011612.html  VolatilityTools_20250312010954.html  Workspace_20250311215720.html  Workspace_20250312164320.html  account_20250311000431.html  account_20250311003409.html  account_20250311003608.html  account_20250311003625.html  account_20250311010529.html  finance-timeseries_20250312151426.html  finance-timeseries_20250312152611.html  finance-timeseries_20250312152748.html  finance-timeseries_20250312152917.html  finance-timeseries_20250312154922.css  finance-timeseries_20250312155153.css  finance-timeseries_20250312155506.css  finance-timeseries_20250312155647.css  finance-timeseries_20250312155835.css  finance-timeseries_20250312155850.css  (+35 more)
(+411 files in other folders)
