[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "components>=0.0.1a0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "scipy>=1.15.1",
    "statsmodels>=0.14.4",
    "streamlit>=1.41.1",
]
